--- a/wp-content/plugins/elementor/assets/lib/eicons/css/elementor-icons.css
+++ b/wp-content/plugins/elementor/assets/lib/eicons/css/elementor-icons.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Outfit', sans-serif;;
+  font-family: 'Outfit', sans-serif;
   src: url("./../fonts/eicons.eot?5_23_0");
   src: url("./../fonts/eicons.eot?5_23_0#iefix") format("embedded-opentype"), url("./../fonts/eicons.woff2?5_23_0") format("woff2"), url("./../fonts/eicons.woff?5_23_0") format("woff"), url("./../fonts/eicons.ttf?5_23_0") format("truetype"), url("./../fonts/eicons.svg?5_23_0#eicon") format("svg");
   font-weight: normal;
