--- a/wp-content/uploads/elementor/css/post-22.css
+++ b/wp-content/uploads/elementor/css/post-22.css
@@ -244,7 +244,7 @@
 
 .elementor-22 .elementor-element.elementor-element-ed3c453 .te-title {
     color: #FD6145;
-    font-family: "Urbanist", Sans-serif;
+    font-family: 'Outfit', sans-serif;
     font-size: 16px;
     font-weight: 800;
     text-transform: uppercase;
@@ -326,7 +326,7 @@
 
 .elementor-22 .elementor-element.elementor-element-6456607 {
     transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
-    padding: 0px 0px 130px 0px;
+    padding: 0px 0px 100px 0px;
 }
 
 .elementor-22 .elementor-element.elementor-element-6456607>.elementor-background-overlay {
