--- a/wp-content/themes/printpark/assets/css/bootstrap.css
+++ b/wp-content/themes/printpark/assets/css/bootstrap.css
@@ -5373,9 +5373,9 @@ textarea.form-control-lg {
 .modal-backdrop.fade {
   opacity: 0;
 }
-.modal-backdrop.show {
+/* .modal-backdrop.show {
   opacity: var(--bs-backdrop-opacity);
-}
+} */
 
 .modal-header {
   display: flex;
