--- a/wp-content/themes/printpark/assets/css/style.css
+++ b/wp-content/themes/printpark/assets/css/style.css
@@ -4360,7 +4360,7 @@ div#mCSB_1_container{
 
 .main-footer .widget-section{
   position: relative;
-  padding: 92px 0px 94px 0px;
+  padding: 60px 0px 40px 0px;
 }
 
 .main-footer .newsletter-widget .icon-box{
@@ -8732,7 +8732,7 @@ div#mCSB_1_container{
 
 .service-details{
   position: relative;
-  padding: 80px 0px;
+  padding: 45px 0px;
 }
 
 .service-sidebar{
@@ -10720,7 +10720,9 @@ div#mCSB_1_container{
   padding: 32px 40px 39px 40px;
   border-radius: 25px;
 }
-
+#quebak{
+  background-color: #FEF4F0;
+}
 .myaccount-section .form-inner label{
   position: relative;
   display: block;
