--- a/wp-content/themes/printpark/assets/css/style.css
+++ b/wp-content/themes/printpark/assets/css/style.css
@@ -1,4 +1,3 @@
- 
 /* Css For Printpark */
 
 /************ TABLE OF CONTENTS ***************
@@ -51,7 +50,7 @@
 ====================================================================
 
  ***/
-* {
+ * {
   margin:0px;
   padding:0px;
   border:none;
@@ -109,6 +108,12 @@ body {
   max-width:680px;
   margin:0 auto;
 }
+
+.desktopcorevalue{
+  margin-left: 45px;
+}
+
+
 
 .boxed_wrapper{
   position: relative;
@@ -712,13 +717,48 @@ img {
 
 }
 
-.header-top .text p i{
+.header-top .text2 p i{
   position: absolute;
   left: 0px;
   top: 4px;
   font-size: 20px;
 }
 
+.header-top .text2{
+  position: relative;
+  display: inline-block;
+  background: #faf1ef;
+  padding: 4px 20px;
+  border-radius: 30px;
+}
+
+.header-top .text2 p{
+  position: relative;
+  color: #7b7675;
+  padding-left: 27px;
+}
+
+.header-top .text2 p a{
+  display: inline-block;
+  color: #7b7675;
+}
+
+.header-top .text2 p a:hover{
+
+}
+
+.header-top .text2 strong{
+  font-weight: 400;
+  color: #0c0c0c;
+}
+
+
+.header-top .text2 p i{
+  position: absolute;
+  left: 0px;
+  top: 4px;
+  font-size: 20px;
+}
 .header-top .social-links{
   position: relative;
   display: flex;
@@ -768,12 +808,24 @@ img {
   padding: 0px 50px 0px 130px;
 }
 
+.main-header .outer-box1 {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 50px 0px 130px;
+}
 .main-header .logo-box{
   position: relative;
   margin-right: 150px;
 }
 
 .main-header .outer-box .left-column{
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.main-header .outer-box1 .left-column{
   position: relative;
   display: flex;
   align-items: center;
@@ -1194,7 +1246,7 @@ img {
   text-align:center;
   font-size:14px;
   line-height:30px;
-  padding: 10px 0px 30px 0px;
+  padding: 10px 30px 30px 0px;
   font-weight:800;
   font-family: 'Outfit', sans-serif;
   opacity:1;
@@ -2140,6 +2192,7 @@ div#mCSB_1_container{
   font-size: 30px;
   top: 5px;
   right: 5px;
+  cursor: default;
 }
 
 .service-block-one .inner-box .link-btn a:hover{
@@ -2436,7 +2489,7 @@ div#mCSB_1_container{
   border: 1px dashed #d8d2d0;
   border-radius: 15px;
   text-transform: uppercase;
-}
+  }
 
 .highlights-list li a:hover{
 
@@ -2455,11 +2508,11 @@ div#mCSB_1_container{
   transition: all 500ms ease;
 }
 
-.highlights-list li a:hover span{
+/* .highlights-list li a:hover span{
   padding-right: 34px;
-}
+} */
 
-.highlights-list li a span:before{
+/* .highlights-list li a span:before{
   position: absolute;
   content: "\f10e";
   font-family: 'flaticon';
@@ -2469,7 +2522,7 @@ div#mCSB_1_container{
   opacity: 0;
   font-weight: 400;
   transition: all 500ms ease;
-}
+} */
 
 .highlights-list li a:hover span:before{
   opacity: 1;
@@ -8463,6 +8516,7 @@ div#mCSB_1_container{
   color: #7b7675;
   padding-right: 16px;
   margin-right: 5px;
+  margin-bottom: 70px;
 }
 
 .page-title .bread-crumb li span{
@@ -12190,7 +12244,7 @@ div#mCSB_1_container{
   display: block;
   font-size: 24px;
   line-height: 34px;
-  font-weight: 700;
+  /* font-weight: 700; */
   color: #fff;
 }
 
@@ -12247,7 +12301,7 @@ div#mCSB_1_container{
   line-height: 24px;
       font-family: 'Outfit', sans-serif;
   color: #fff;
-  font-weight: 800;
+  /* font-weight: 800; */
   text-transform: uppercase;
   margin-bottom: 7px;
 }
@@ -12990,7 +13044,7 @@ div#mCSB_1_container{
 
 .project-details .project-image .image img{
   width: 100%;
-  padding: 0px 0px 50px 0px;
+  padding: 0px 0px 0px 0px;
   /* border-radius: 25px; */
   transition: all 500ms ease;
 }
@@ -13834,6 +13888,7 @@ div#mCSB_1_container{
   top: -1px;
   font-size: 24px;
   font-weight: 400;
+
 }
 
 
@@ -13968,42 +14023,3 @@ display: -webkit-box;
 -webkit-line-clamp: 3;
 overflow: hidden;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
