--- a/wp-content/themes/printpark/assets/css/responsive.css
+++ b/wp-content/themes/printpark/assets/css/responsive.css
@@ -274,7 +274,14 @@
   .page-title .auto-container .content-box{
     margin-bottom: 20px;
     }
+    .sec-title #viscont{
+     font-size: 23px;
+    }
 
+    #sumalogo{
+      height: 55px;
+      width: 450px;
+    }
 }
 
 
@@ -552,7 +559,10 @@
   .mobilecorevalue{
     display: block;
   }
-    
+  #sumalogo{
+    height: 45px;
+    width: 450px;
+  }
   .header-top .text2{
     display: none;
   }
@@ -852,7 +862,7 @@
   .myaccount-section,
   .team-style-two,
   .project-details{
-    padding: 0px 0px 70px 0px;
+    padding: 0px 0px 30px 0px;
   }
 
   .checkout-page-section .information-inner,
