--- a/wp-content/uploads/elementor/css/post-1802.css
+++ b/wp-content/uploads/elementor/css/post-1802.css
@@ -102,9 +102,9 @@
     margin-bottom: 0px;
 }
 
-.elementor-1802 .elementor-element.elementor-element-abee258>.elementor-element-populated {
+/* .elementor-1802 .elementor-element.elementor-element-abee258>.elementor-element-populated {
     padding: 0px 15px 0px 0px;
-}
+} */
 
 .elementor-1802 .elementor-element.elementor-element-b21af8c .te-count {
     color: #444444;
@@ -119,7 +119,7 @@
 }
 
 .elementor-1802 .elementor-element.elementor-element-b21af8c>.elementor-widget-container {
-    padding: 0px 0px 15px 0px;
+    padding: 0px 0px 1px 0px;
 }
 
 .elementor-1802 .elementor-element.elementor-element-c89885a .te-count {
@@ -135,7 +135,7 @@
 }
 
 .elementor-1802 .elementor-element.elementor-element-c89885a>.elementor-widget-container {
-    padding: 15px 0px 10px 0px;
+    padding: 1px 0px 1px 0px;
 }
 
 .elementor-bc-flex-widget .elementor-1802 .elementor-element.elementor-element-2d16222.elementor-column .elementor-widget-wrap {
@@ -151,9 +151,9 @@
     margin-bottom: 0px;
 }
 
-.elementor-1802 .elementor-element.elementor-element-2d16222>.elementor-element-populated {
+/* .elementor-1802 .elementor-element.elementor-element-2d16222>.elementor-element-populated {
     padding: 0px 0px 10px 15px;
-}
+} */
 
 .elementor-1802 .elementor-element.elementor-element-c26c5c0 .te-text {
     margin: -7px 0px 0px 0px;
@@ -223,7 +223,7 @@
 
 .elementor-1802 .elementor-element.elementor-element-79a7c18 {
     transition: background 0.3s, border 0.3s, border-radius 0.3s, box-shadow 0.3s;
-    padding: 65px 0px 65px 0px;
+    padding: 65px 0px 0px 0px;
 }
 
 .elementor-1802 .elementor-element.elementor-element-79a7c18>.elementor-background-overlay {
@@ -701,7 +701,7 @@
 }
 
 .elementor-1802 .elementor-element.elementor-element-f141bda {
-    padding: 70px 0px 70px 0px;
+    padding: 10px 0px 20px 0px;
 }
 
 .elementor-1802 .elementor-element.elementor-element-0839536>.elementor-widget-wrap>.elementor-widget:not(.elementor-widget__width-auto):not(.elementor-widget__width-initial):not(:last-child):not(.elementor-absolute) {
